objects/PMC_SS_ActualPayment__c.object
<CustomObject>
    <description>This Object will be used to update Settlement data from SAP via integration when Settlement is generated in SAP.</description>
    <fields>
        <fullName>PMC_SS_AddressLineOfPayer__c</fullName>
        <description>Address Line of Payment Recipient</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line Of Payer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ConditionContractNumber__c</fullName>
        <description>Condition Contract Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CreatedOn__c</fullName>
        <description>Settlement Document system created on date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DocumentDateinDocument__c</fullName>
        <description>The document date is the date on which the original document was issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Date in Document</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DocumentItem__c</fullName>
        <description>Settlement document Item number</description>
        <label>Document Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalSalesAgreementIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Sales Agreement Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_ItemNetAmtforCustInDocCurrency__c</fullName>
        <description>Value of all settlement document items excluding tax in the document currency.</description>
        <label>Item Net Amount for Cust In Doc Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ItemTaxAmtofCustInDocCurrency__c</fullName>
        <description>The total sales taxes, expressed in the document currency.</description>
        <label>Item Tax Amount of Cust In Doc Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NetPriceinDocumentCurrency__c</fullName>
        <description>Net Value per unit</description>
        <label>Net Price in Document Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner with whom the rebate is settled.</description>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actual Payments</relationshipLabel>
        <relationshipName>PMC_SS_ActualPaymentsAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PostingDate__c</fullName>
        <description>Indicates the posting date of the settlement document list.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PriceUnitofSettlementDocumentItem__c</fullName>
        <description>Unit of Measure (eg TON)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Unit of Settlement Document Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductFamily__c</fullName>
        <description>Material Group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Material number</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Actual Payments</relationshipLabel>
        <relationshipName>PMC_SS_ActualPaymentsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QtyofSettlementManagementDocItem__c</fullName>
        <description>Quantity of Settlement document Item</description>
        <label>Qty of Settlement Management Doc Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RebateProgramType__c</fullName>
        <description>Classification used to differentiate between different types of condition contracts.</description>
        <label>Rebate Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZR01</fullName>
                    <label>Individual Rebate</label>
                </value>
                <value>
                    <fullName>ZR02</fullName>
                    <label>Portfolio Rebate</label>
                </value>
                <value>
                    <fullName>ZR03</fullName>
                    <label>Growth Rebate</label>
                </value>
                <value>
                    <fullName>ZR05</fullName>
                    <label>Blended Rebate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ReversedDocument__c</fullName>
        <description>Document number populated if settlement document is reversed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reversed Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Sales Agreement Id related to Settlement</description>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Actual Payments</relationshipLabel>
        <relationshipName>Actual_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SettlementDate__c</fullName>
        <description>Condition contract settlement date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SettlementDocumentNumber__c</fullName>
        <description>Document number that uniquely identifies a settlement document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Settlement Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SettlementDocumentTypeDescription__c</fullName>
        <description>Settlement Type description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Settlement Document Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SettlementDocumentType__c</fullName>
        <description>Classifies various types of documents in Settlement Management. Eg, Sales Rebate Credit, Sales Rebate Delta Accruals</description>
        <label>Settlement Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0S12</fullName>
                    <label>Sales Rebate</label>
                </value>
                <value>
                    <fullName>0S14</fullName>
                    <label>Sales Rebate Reversal</label>
                </value>
                <value>
                    <fullName>0S32</fullName>
                    <label>Sales Rebate Manual</label>
                </value>
                <value>
                    <fullName>0S34</fullName>
                    <label>Sales Manual Rebate Reversal</label>
                </value>
                <value>
                    <fullName>0S42</fullName>
                    <label>Sales Rebate Delta Accruals</label>
                </value>
                <value>
                    <fullName>0S44</fullName>
                    <label>Sales Rebate Delta Accruals Reversal</label>
                </value>
                <value>
                    <fullName>0S4B</fullName>
                    <label>Sales Rebate Manual Delta Accruals</label>
                </value>
                <value>
                    <fullName>0S4D</fullName>
                    <label>Sales Rebate Manual Delta Accruals Rev</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ShortText__c</fullName>
        <description>Material description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Short Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitofMeasureofSettlemntDocItemQt__c</fullName>
        <description>Unit of Measure (eg TON)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit of Measure of Settlement DocItemQty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Actual Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Actual Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Payments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>